--- a/client/src/sass/include/_actor.scss
+++ b/client/src/sass/include/_actor.scss
@@ -35,6 +35,7 @@
 
   > div {
     margin-left: $img-margin;
+    min-width: 1px;
   }
 
   .actor-info {
@@ -42,6 +43,7 @@
 
     > div:first-child {
       flex-grow: 1;
+      min-width: 1px;
     }
   }
 
@@ -54,6 +56,10 @@
     font-size: 28px;
     font-weight: $font-bold;
     margin: 0;
+  }
+
+  .actor-handle {
+    @include ellipsis;
   }
 
   .actor-handle,
